# mailchimp_list

./: Cargo.toml  package-lock.json  package.json  schema.sql  wrangler.toml
src/: callback.html  index.html  lib.rs  session.rs
src/mailchimp/: campaign.rs  lists.rs  mod.rs
