[package]
name = "mailchimp_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
time = { version = "0.3.20", features = ["formatting", "wasm-bindgen"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
worker = { git = "https://github.com/FlareLine/workers-rs", branch = "d1-support", features = [
    "d1",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
